--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.basistech</groupId>
         <artifactId>open-source-parent</artifactId>
         <version>0.0.5</version>
-        <relativePath></relativePath>
+        <relativePath />
     </parent>
     <prerequisites>
         <maven>3.0.4</maven>
@@ -15,7 +13,7 @@
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
     <name>rosette-api-parent</name>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
     <inceptionYear>2015</inceptionYear>
@@ -23,7 +21,8 @@
     <scm>
         <connection>scm:git:git@github.com:rosette-api/java.git</connection>
         <developerConnection>scm:git:git@github.com:rosette-api/java.git</developerConnection>
-    </scm>
+      <tag>rosette-api-parent-0.5.0</tag>
+  </scm>
     <distributionManagement>
         <site>
             <id>site</id>
