--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.5.0</version>
+        <version>0.5.1-SNAPSHOT</version>
     </parent>
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-examples</artifactId>
     <name>rosette-api-examples</name>
-    <version>0.5.0</version>
+    <version>0.5.1-SNAPSHOT</version>
     <properties>
         <assembly.skipAssembly>true</assembly.skipAssembly>
         <maven.javadoc.skip>true</maven.javadoc.skip>
