--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
     <name>rosette-api-parent</name>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
     <inceptionYear>2015</inceptionYear>
