--- a/json/pom.xml
+++ b/json/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.5.1-SNAPSHOT</version>
+        <version>0.5.0.1</version>
     </parent>
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-json</artifactId>
