--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
     <name>rosette-api-parent</name>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
     <inceptionYear>2015</inceptionYear>
@@ -21,7 +21,7 @@
     <scm>
         <connection>scm:git:git@github.com:rosette-api/java.git</connection>
         <developerConnection>scm:git:git@github.com:rosette-api/java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>rosette-api-parent-0.7.0</tag>
     </scm>
     <distributionManagement>
         <site>
