--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.7.0</version>
+        <version>0.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>rosette-api</artifactId>
     <name>rosette-api</name>
@@ -160,8 +160,4 @@
             </testResource>
         </testResources>
     </build>
-
-  <scm>
-    <tag>rosette-api-parent-0.7.0</tag>
-  </scm>
 </project>
