--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     </distributionManagement>
 
     <properties>
-        <rosette-api-model-version>${project.version}</rosette-api-model-version>
+        <rosette-api-model-version>0.7.1</rosette-api-model-version>
         <jackson-version>2.6.2</jackson-version>
         <junit-version>4.12</junit-version>
         <assembly.skipAssembly>false</assembly.skipAssembly>
