--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     </prerequisites>
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
+    <version>0.7.3-SNAPSHOT</version>
     <name>rosette-api-parent</name>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
@@ -30,7 +31,7 @@
     </distributionManagement>
 
     <properties>
-        <rosette-api-model-version>0.7.1</rosette-api-model-version>
+        <rosette-api-model-version>0.7.3-SNAPSHOT</rosette-api-model-version>
         <jackson-version>2.6.2</jackson-version>
         <junit-version>4.12</junit-version>
         <assembly.skipAssembly>false</assembly.skipAssembly>
