--- a/json/pom.xml
+++ b/json/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.7.1-SNAPSHOT</version>
+        <version>0.7.3</version>
     </parent>
     <artifactId>rosette-api-json</artifactId>
     <name>rosette-api-json</name>
@@ -66,4 +66,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>rosette-api-parent-0.7.3</tag>
+  </scm>
 </project>
