--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.7.1-SNAPSHOT</version>
+        <version>0.7.3</version>
     </parent>
     <artifactId>rosette-api-model</artifactId>
     <name>rosette-api-model</name>
@@ -31,4 +31,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>rosette-api-parent-0.7.3</tag>
+  </scm>
 </project>
