--- a/json/pom.xml
+++ b/json/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.basistech.rosette</groupId>
         <artifactId>rosette-api-parent</artifactId>
-        <version>0.7.3</version>
+        <version>0.7.4-SNAPSHOT</version>
     </parent>
     <artifactId>rosette-api-json</artifactId>
     <name>rosette-api-json</name>
@@ -66,8 +66,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>rosette-api-parent-0.7.3</tag>
-  </scm>
 </project>
