--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.1-SNAPSHOT</version>
     <name>rosette-api-parent</name>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
@@ -18,7 +18,7 @@
     <scm>
         <connection>scm:git:git@github.com:rosette-api/java.git</connection>
         <developerConnection>scm:git:git@github.com:rosette-api/java.git</developerConnection>
-        <tag>rosette-api-parent-0.7.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <site>
