--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.basistech.rosette</groupId>
     <artifactId>rosette-api-parent</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.4-SNAPSHOT</version>
     <name>rosette-api-parent</name>
     <packaging>pom</packaging>
     <description>Parent project for Rosette API</description>
@@ -18,7 +18,7 @@
     <scm>
         <connection>scm:git:git@github.com:rosette-api/java.git</connection>
         <developerConnection>scm:git:git@github.com:rosette-api/java.git</developerConnection>
-        <tag>rosette-api-parent-0.7.4</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <site>
@@ -28,7 +28,7 @@
     </distributionManagement>
 
     <properties>
-        <rosette-api-model-version>0.7.1</rosette-api-model-version>
+        <rosette-api-model-version>0.7.4-SNAPSHOT</rosette-api-model-version>
         <jackson-version>2.6.2</jackson-version>
         <junit-version>4.12</junit-version>
         <assembly.skipAssembly>false</assembly.skipAssembly>
